--- a/style.css
+++ b/style.css
@@ -5,3 +5,11 @@ background-color:linear-gradient(#57C785,#2A7B9B);
 main{
     padding:10px;
 }
+.image-mine{
+    border-radius:50%;
+    width:250px;
+    height:250px;
+    object-fit:cover;
+    border:3px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
