--- a/style.css
+++ b/style.css
@@ -13,3 +13,22 @@ main{
     border:3px;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
+.typing{
+    color: #2600ff;
+    font-size: 20px;
+    border-right:3px solid black;
+    white-space: nowwrap;
+    overflow: hidden;
+    width:0;
+    animation: typing 3s steps(15) 1s forwards, blink 0.7s step-end infinite;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+   font-style: italic;
+}
+@keyframes typing{
+    from{width:0;}
+    to{width:35ch;}
+} 
+@keyframes blink{
+    50%{border-color: transparent}
+}
