--- a/style.css
+++ b/style.css
@@ -132,3 +132,39 @@ main{
     flex-direction: row;
     gap:50px;
 }
+#contactme{
+    text-align:center;
+    padding:30px;
+    gap:40px;
+    
+}
+.contact-design{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    gap:60px;
+}
+#contactme div{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    gap:10px;
+}
+#contactme a{
+    color:#0077b6;
+    text-decoration:none;
+    font-weight:bold;
+}
+#colorme a:hover{
+    text-decoration:underline;
+}
+#contactme > div{
+    display:flex;
+    align-items:center;
+    margin:0 20px;
+}
+#contactme i{
+    margin-right:8px;
+    font-size:1.2rem;
+    color:#333;
+}
