--- a/style.css
+++ b/style.css
@@ -168,4 +168,14 @@ main{
     font-size:1.2rem;
     color:#333;
 }
-
+#certifications{
+    text-align:center;
+    padding:40px 20px;
+}
+.diff-cert{
+    display:flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+    justify-content:center;
+    gap:20px;
+}
