--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ main{
     flex-wrap:wrap;
     justify-content:center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     gap:50px;
 }
 #contactme{
