--- a/style.css
+++ b/style.css
@@ -94,6 +94,13 @@ main{
     transform: translateY(-10px);
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
 }
+.project-card img{
+    width: 100%;
+    height: 180px;          /* control height */
+    object-fit: cover;      /* crop instead of stretch */
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
 
 .project-card h3{
     color:blueviolet;
