--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+.typing {
+    max-width: 100%;
+    width: fit-content;
+}
+
 :root {
     --bg-color: #ffffff;
     --text-color: #111111;
@@ -25,7 +38,7 @@ body {
 }
 
 main {
-    padding: 70px 20px;
+    padding: 70px 10px;
 }
 .navbar-toggler-icon {
     filter: invert(1);
@@ -46,7 +59,6 @@ main {
     border-right:3px solid var(--text-color);
     white-space: nowrap;
     overflow: hidden;
-    width:0;
     animation: typing 3s steps(15) 1s forwards, blink 0.7s step-end infinite;
     font-family: "Ubuntu", sans-serif;
     font-weight: 700;
@@ -54,9 +66,15 @@ main {
 }
 
 @keyframes typing{
-    from{width:0;}
-    to{width:35ch;}
+    from { width: 0; }
+    to { width: 100%; }
 } 
+@media (max-width: 576px) {
+    @keyframes typing {
+        to { width: 20ch; }
+    }
+}
+
 
 @keyframes blink{
     50%{border-color: transparent}
