--- a/style.css
+++ b/style.css
@@ -377,7 +377,11 @@ body.dark .skill-box img {
     font-family:"Ubuntu", sans-serif;
 }
 
+#certifications{
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 
+}
 .theme-toggle{
     background-color: var(--toggle-bg);
     color: var(--toggle-text);
